fix negative timer & text align center

--- a/components/Location/styles.module.css
+++ b/components/Location/styles.module.css
@@ -9,4 +9,5 @@
  font-size: 14px;
  background: rgb(255, 193, 24);
  color: rgb(158, 84, 0);
+ text-align: center;
 }
